--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -270,7 +270,7 @@ a[href^="/gottaspinfast"] {
     }
 
 
-a[href|="/longbonz"], a[href|="/longbonstairs"], a[href|="/skippytherock"], a[href|="/hoo2"], a[href|="/hoo1"], a[href|="/eeeeviiil"], a[href|="/talltwi"], a[href|="/lbsalutez"], a[href|="/lbcomicscrunch"], a[href|="/lbdive"], a[href|="/lbintro"], a[href|="/lbohthis"], a[href|="/lbpushthebutton"], a[href|="/lbrearing"], a[href|="/lbrelaxing"], a[href|="/lbwalk"], a[href|="/lbshrug"], a[href|="/lbteeny"], a[href|="/lbglance"]
+a[href|="/longbonz"], a[href|="/longbonstairs"], a[href|="/skippytherock"], a[href|="/hoo2"], a[href|="/hoo1"], a[href|="/eeeeviiil"], a[href|="/talltwi"], a[href|="/lbsalute"], a[href|="/lbcomicscrunch"], a[href|="/lbdive"], a[href|="/lbintro"], a[href|="/lbohthis"], a[href|="/lbpushthebutton"], a[href|="/lbrearing"], a[href|="/lbrelaxing"], a[href|="/lbwalk"], a[href|="/lbshrug"], a[href|="/lbteeny"], a[href|="/lbglance"]
 
  {
     display: block;
@@ -317,7 +317,7 @@ a[href|="/talltwi"] {
     height: 140px;
     background-position: -140px -210px
     }
-a[href|="/lbsalutez"] {
+a[href|="/lbsalute"] {
     width: 161px;
     height: 140px;
     background-position: -233px -210px
