--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -377,7 +377,7 @@ a[href|="/supershy"], a[href|="/ohhmy"] {
     }
 /* FANCY SHEET I MEAN SHEET #4 */
 
-a[href|="/dappershy"], a[href|="/fancyshy"], a[href|="/colonthree"], a[href|="/cutieflutter"], a[href|="/flutterland"], a[href|="/lostinflutterland"], a[href|="/mad"], a[href|="/attention"], a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"], a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"],  a[href|="/flutterhood"], a[href|="/bunnyhood"], a[href|="/bunnyhoodshy"], a[href|="/flutterconcerned"], a[href|="/areyouokay"], a[href|="/shyconcerned"], a[href|="/chibiflutterspy"], a[href|="/chibispy"], a[href|="/cloudfilly"], a[href|="/cloudshy"], a[href|="/pleeease"], a[href|="/flutterplease"] {
+a[href|="/dappershy"], a[href|="/fancyshy"], a[href|="/colonthree"], a[href|="/cutieflutter"], a[href|="/flutterland"], a[href|="/lostinflutterland"], a[href|="/mad"], a[href|="/attention"], a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"], a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"],  a[href|="/flutterhood"], a[href|="/bunnyhood"], a[href|="/bunnyhoodshy"], a[href|="/flutterconcerned"], a[href|="/areyouokay"], a[href|="/shyconcerned"], a[href|="/chibiflutterspy"], a[href|="/chibispy"], a[href|="/buttfilly"], a[href|="/buttshy"], a[href|="/pleeease"], a[href|="/flutterplease"], a[href|="/B"] {
 
         display: block;
     clear: none;
@@ -402,7 +402,7 @@ a[href|="/attention"] {
     width: 193px;
     background-position: -661px -0px;
     }
-a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"] {
+a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"], a[href|="/B"] {
     width: 149px;
     background-position: -854px -0px;
     }
@@ -410,7 +410,7 @@ a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"] {
     width: 137px;
     background-position: -1003px -0px;
     }
-a[href|="/cloudfilly"], a[href|="/cloudshy"] {
+a[href|="/buttfilly"], a[href|="/buttshy"] {
     width: 153px;
     background-position: -1140px -0px;
     }
