--- a/addon/bpmotes.css
+++ b/addon/bpmotes.css
@@ -126,8 +126,8 @@
  * ugly on Firefox for some reason.)
  */
 .bpm-search-toggle.newbutton {
-    padding: 0px;
-    margin: 3px 2px 2px 2px !important;
+    padding: 0px 5px;
+    margin: 2px !important;
 }
 
 /* Container */
